# StatisticalFaceAnalysis

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  Properties.txt
SFALib/: CMakeLists.txt
SFALib/include/SFA/ICP/: ICP.h  PCA_ICP.h  RigidPlaneICP.h  RigidPointICP.h
SFALib/include/SFA/NearestNeighbor/: NearestNeighbor.h  SimpleNearestNeighbor.h
SFALib/include/SFA/Utility/: AbstractLog.h  AbstractMesh.h  AbstractPointSelector.h  Vertex.h
SFALib/src/SFA/ICP/: ICP.cpp  PCA_ICP.cpp  RigidPlaneICP.cpp  RigidPointICP.cpp
SFALib/src/SFA/NearestNeighbor/: NearestNeighbor.cpp  SimpleNearestNeighbor.cpp
SFALib/src/SFA/Utility/: AbstractLog.cpp  AbstractMesh.cpp  AbstractPointSelector.cpp
SFAStats/: CMakeLists.txt
SFAStats/include/SFA/Stats/: AverageMatchingError.h  PCAMatchingError.h  PerformanceBenchmark.h  StatRunner.h  StatRunner.imp
SFAStats/src/SFA/: main.cpp
SFAStats/src/SFA/Stats/: AverageMatchingError.cpp  PCAMatchingError.cpp  PerformanceBenchmark.cpp
SFAViewer/: CMakeLists.txt
SFAViewer/include/SFA/NearestNeighbor/: KdTreeNearestNeighbor.h
SFAViewer/include/SFA/Utility/: Log.h  Model.h
SFAViewer/src/SFA/: main.cpp
SFAViewer/src/SFA/NearestNeighbor/: KdTreeNearestNeighbor.cpp
SFAViewer/src/SFA/Utility/: Log.cpp  Model.cpp
SFA_DBGL_Lib/: CMakeLists.txt
SFA_DBGL_Lib/include/SFA/Utility/: PoissonDiskPointSelector.h  PoissonDiskSampler.h  PoissonDiskSampler.imp
SFA_DBGL_Lib/src/SFA/Utility/: Log.cpp  Model.cpp  PoissonDiskPointSelector.cpp
include/ICP/: IterativeClosestPoint.h  PCA_ICP.h  RigidPointICP.h
include/NearestNeighbor/: KdTreeNearestNeighbor.h  NNMesh.h  NNVector3.h  NNVertex.h  NearestNeighbor.h  SimpleNearestNeighbor.h  Vertex.h
include/SFA/: Model.h  Vec3.h
src/: main.cpp
src/ICP/: IterativeClosestPoint.cpp  PCA_ICP.cpp  RigidPointICP.cpp
src/NearestNeighbor/: KdTreeNearestNeighbor.cpp  NNMesh.cpp  NNVector3.cpp  NearestNeighbor.cpp  SimpleNearestNeighbor.cpp
src/SFA/: Model.cpp  Vec3.cpp
test/: CMakeLists.txt  tests.cpp
test/ICP/: RigidPlaneICPTest.cpp  RigidPointICPTest.cpp
test/NearestNeighbor/: NNVector3Test.cpp  NearestNeighborTest.cpp  SimpleNearestNeighborTest.cpp
test/Statistics/: RigidBodyPoint2PointStatistics.cpp
test/Utility/: ModelTest.cpp  PoissonDiskSamplerTest.cpp
